Fix module resolution (#9)
* fix module resolution

* 1.2.3
