# .riorc.js
@@ -3,6 +3,7 @@ module.exports = {
     '/math': 'All math related functionality',
     'Misc': 'All other endpoints',
     '/v2': 'V2 API documentation',
+    '/greetings': 'Greetings API',
   },
   errorModel: {
     errorText: {
